
syntax = "proto3";

// The line must exist
// protoc-gen-go: unable to determine Go import path for "helloworld.proto"
option go_package = "agent-server/pb";

package pb;

service UpdateConfService {
    rpc UpdateConFile (FileRequest) returns (FileResponse);
}

message FileRequest {
    string fileName = 1;
    string filePath = 2;
    string originContent = 3;
    string updatedContent = 4;
}

message FileResponse {
    string status = 1;
    string error = 2;
}

